# tensaku

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  config.toml  dev.tensaku.Tensaku.metainfo.xml  dev.tensaku.Tensaku.yml
.github/workflows/: aur-publish.yml  ci.yml  release-flatpak.yml  release-plz.yml  release-update-metainfo.yml  release-update-site.yml  release.yml
assets/: tensaku-edit
cli/src/: command_line.rs
packaging/aur/: PKGBUILD
packaging/aur-bin/: PKGBUILD  tensaku.install
packaging/aur-git/: PKGBUILD
src/: configuration.rs  desktop_install.rs  display.rs  doctor.rs  glyph_font.rs  hypr.rs  main.rs  omarchy_wrapper.rs  sketch_board.rs  state.rs
src/assets/: default.css
src/femtovg_area/: imp.rs  mod.rs
src/tools/: arrow.rs  blur.rs  brush.rs  crop.rs  ellipse.rs  highlight.rs  line.rs  marker.rs  mod.rs  pasted_image.rs  pointer.rs  rectangle.rs  spotlight.rs  text.rs
src/ui/: preferences.rs  toolbars.rs  welcome.rs  zoom_indicator.rs
